add stream example
